--- a/src/components/Cardhomepage.css
+++ b/src/components/Cardhomepage.css
@@ -1,14 +1,85 @@
+
 .Cardhomepage {
-    width:670px;
+    display: grid;
+    width: 80%;
+    max-width:670px;
     position: relative;
-    margin:auto;
-    border: 1px solid;
-    margin:20px auto 20px auto;
+    margin: 80px auto 80px auto;
+    padding: 30px 7% 30px 7%;
+    grid-template-columns: auto 55px;
+    grid-template-rows: 26px 26px auto auto auto 25px;
 }
 
-.Cardhomepage img {
+
+.Cardhomepage:hover {
+    box-shadow: 0px 10px 70px rgba(0, 0, 0, 0.05);
+}
+
+.cardlogo{
     width:55px;
     height:55px;
     margin-left:auto;
+    grid-column:2/3;
+    grid-row:1/3;
 }
 
+
+.year{
+    margin-top:0px;
+    grid-row: 1/2;
+    grid-column: 1/2;
+    font-weight: normal;
+}
+
+.location{
+    margin-top:0;
+    grid-row: 2/3;
+    grid-column: 1/2;
+    font-weight: normal;
+    
+}
+
+.Cardhomepage h4 {
+    text-decoration:none;
+}
+
+.Cardhomepage h2 {
+    margin:0;
+    padding:20px 0 20px 0;
+    grid-row: 3/4;
+    text-decoration: underline;
+}
+
+.Cardhomepage h3 {
+    margin:0;
+    padding-bottom:30px;
+    grid-row: 4/5;
+    text-decoration: underline;
+}
+
+
+.Cardhomepage p {
+    font-family: 'Rosarivo', serif;
+    text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: antialiased;
+    font-size:22px;
+    margin:0;
+    padding-bottom:20px;
+    grid-row: 5/6;
+    line-height:140%;
+    text-decoration:none;
+}
+
+.arrow {
+    width:25px;
+    height:25px;
+    margin-left:auto;
+    grid-column-start:2;
+    grid-row:6/7;
+    transform: rotate(270deg);
+}
+
+.cardlink {
+    all: initial;
+    cursor: pointer;
+  }
