--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -8,33 +8,43 @@
     src: url('/fonts/helvetica_ce_bold.woff2') format('ttf');
 }
 
-@import url('https://fonts.googleapis.com/css?family=Rosarivo');
+@import url('https://fonts.googleapis.com/css?family=Rosarivo:400,400i');
 
 
 body {
     font-family: 'Rosarivo', serif;
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
-    font-size: 20px;
+    font-size: 22px;
     line-height: 1.2;
     margin:0;
     padding:0;
 }
 
 a {
+    font-family: 'Helvetica CE', Helvetica, sans-serif;
+    font-weight:bold;
+    color: black;
+    text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: antialiased;
+    text-decoration: underline;
+}
+
+
+.inlink{
     font-weight: 600;
     text-decoration: underline;
   }
 
 h1 {
-    font-family: Helvetica CE, Helvetica;
+    font-family: 'Helvetica CE', Helvetica, sans-serif;
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
     font-weight: bold;
 }
 
 h2 {
-    font-family: Helvetica CE, Helvetica;
+    font-family: 'Helvetica CE', Helvetica, sans-serif;
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
     font-size: 30px;
@@ -43,7 +53,7 @@ h2 {
 }
 
 h3 {
-    font-family: Helvetica CE, Helvetica;
+    font-family: 'Helvetica CE', Helvetica, sans-serif;
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
     font-size: 26px;
@@ -51,9 +61,22 @@ h3 {
 
 }
 
+h4 {
+    font-family: 'Helvetica CE', Helvetica, sans-serif;
+    text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: antialiased;
+    font-size: 16px;
+    line-height: 1;
+    color: #8B8B8B;
+
+}
+
+
+
+
 .Hero {
     padding:0;
-    height:100vh;    
+    height:90vh;    
     vertical-align: middle;
     position:relative;
 }
@@ -65,7 +88,8 @@ h3 {
     -webkit-transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
     margin:0;
-    width: 672px;
+    width: 85%;
+    max-width: 672px;
     position:absolute;
 }
 
@@ -102,8 +126,41 @@ h3 {
 }
 
 .page{
-    border:2px solid;
+    width:90%;
     max-width: 1134px;
-    margin:auto auto auto auto;
+    margin:0 auto 100px auto;
     position:relative;
+    padding:60px 0 60px 0;
+    box-shadow: 0px 10px 70px rgba(0, 0, 0, 0.05);
+    text-align:center;
+}
+
+.bio {
+    width:80%;
+    margin:20px auto 60px auto;
+    text-align:center;
+}
+
+.avatar{
+    display:block;
+    margin:auto;
+    width: 30vw;
+    max-width:300px;
+    height:30vw;
+    max-width:300px;
+    max-height:300px;
+    border-radius:50%;
+    border: 1px solid;
+}
+
+.downloadicon{
+    display:block;
+    margin:auto;    
+}
+
+.downloadtext{
+    display:inline-block;
+    width: 130px;
+    margin:60px auto 20px auto;
+    text-decoration:underline;
 }
