--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -1,78 +1,3 @@
-@font-face {
-    font-family: Helvetica CE; 
-    src: url('/fonts/Helvetica CE Regular.ttf') format('ttf');
-    src: url('/fonts/Helvetica CE Bold.ttf') format('ttf');
-    src: url('/fonts/helvetica_ce_regular.woff') format('ttf');
-    src: url('/fonts/helvetica_ce_regular.woff2') format('ttf');
-    src: url('/fonts/helvetica_ce_bold.woff') format('ttf');
-    src: url('/fonts/helvetica_ce_bold.woff2') format('ttf');
-}
-
-@import url('https://fonts.googleapis.com/css?family=Rosarivo:400,400i');
-
-
-body {
-    font-family: 'Rosarivo', serif;
-    text-rendering: optimizeLegibility;
-    -webkit-font-smoothing: antialiased;
-    font-size: 22px;
-    line-height: 1.2;
-    margin:0;
-    padding:0;
-}
-
-a {
-    font-family: 'Helvetica CE', Helvetica, sans-serif;
-    font-weight:bold;
-    color: black;
-    text-rendering: optimizeLegibility;
-    -webkit-font-smoothing: antialiased;
-    text-decoration: underline;
-}
-
-
-.inlink{
-    font-weight: 600;
-    text-decoration: underline;
-  }
-
-h1 {
-    font-family: 'Helvetica CE', Helvetica, sans-serif;
-    text-rendering: optimizeLegibility;
-    -webkit-font-smoothing: antialiased;
-    font-weight: bold;
-}
-
-h2 {
-    font-family: 'Helvetica CE', Helvetica, sans-serif;
-    text-rendering: optimizeLegibility;
-    -webkit-font-smoothing: antialiased;
-    font-size: 30px;
-    line-height: 1;
-
-}
-
-h3 {
-    font-family: 'Helvetica CE', Helvetica, sans-serif;
-    text-rendering: optimizeLegibility;
-    -webkit-font-smoothing: antialiased;
-    font-size: 26px;
-    line-height: 1;
-
-}
-
-h4 {
-    font-family: 'Helvetica CE', Helvetica, sans-serif;
-    text-rendering: optimizeLegibility;
-    -webkit-font-smoothing: antialiased;
-    font-size: 16px;
-    line-height: 1;
-    color: #8B8B8B;
-}
-
-
-
-
 .homepage__hero {
     padding:0;
     height:90vh;    
@@ -122,7 +47,9 @@ h4 {
     position:absolute;
 }
 
-.page{
+
+
+.homepage__page{
     width:90%;
     max-width: 1134px;
     margin:0 auto 100px auto;
