--- a/src/components/project__intro.css
+++ b/src/components/project__intro.css
@@ -1,16 +1,24 @@
-.project__intro__wrapper {
-    width:90vw;
-    position:relative;
-    margin-top:10vw;
+.project__intro__wrapper{
+width:100%;
+height:100%;
+padding:10vw;
 }
 
 .project__hero__img {
     object-fit: cover;
+    width:90vw;
+    height:90vh;
+    max-width:1134px;
+    margin:100px;
 }
 
 .project__description-wrapper{
     width:85vw;
+    max-width:900px;
     padding:10vw;
+    position: relative;
+    box-shadow: 0px 10px 70px rgba(0, 0, 0, 0.05);
+    margin:0 auto 100px auto;
 
 }
 
