--- a/src/pages/global-styles.css
+++ b/src/pages/global-styles.css
@@ -97,3 +97,13 @@ h4 {
     max-width: 784px;
     margin:0;
 }
+
+.project__article__page{
+    width:90%;
+    max-width: 1134px;
+    margin:0 auto 100px auto;
+    position:relative;
+    padding:60px 0 60px 0;
+    box-shadow: 0px 10px 70px rgba(0, 0, 0, 0.05);
+    text-align:center;
+}
