--- a/src/pages/global-styles.css
+++ b/src/pages/global-styles.css
@@ -99,9 +99,10 @@ h4 {
 }
 
 .project__article__page{
+    display:block;
     width:90%;
     max-width: 1134px;
-    margin:0 auto 100px auto;
+    margin:200px auto 100px auto;
     position:relative;
     padding:60px 0 60px 0;
     box-shadow: 0px 10px 70px rgba(0, 0, 0, 0.05);
