--- a/src/components/project__intro.css
+++ b/src/components/project__intro.css
@@ -1,11 +1,10 @@
 .project__hero__img {
     display:block;
     object-fit: cover;
-    max-width:1134px;
+    max-width:1366px;
     margin:3rem auto 0 auto;
     width: 90vw;
-
-
+    height: 90vh;
 }
 
 
@@ -13,11 +12,11 @@
 .project__description-page{
     display:block;
     width:85vw;
-    max-width:900px;
+    max-width:1134px;
     position: relative;
     box-shadow: 0px 10px 70px rgba(0, 0, 0, 0.05);
     background-color:white;
-    margin:-9rem auto;
+    margin:-15rem auto  auto;
  
 }
 
