--- a/src/pages/global-styles.css
+++ b/src/pages/global-styles.css
@@ -71,40 +71,28 @@ h4 {
 }
 
 
-.project__article__wrapper{
-    width:85vw;
-    padding:10vw;
-
-}
-
-.project__article__page{
-    width:90%;
-    max-width: 1134px;
-    margin:0;
-    position:relative;
-    padding:60px 0 60px 0;
-    box-shadow: 0px 10px 70px rgba(0, 0, 0, 0.05);
-}
 
 .project__article__p{
-    width:60%;
-    max-width: 784px;
-    margin:0;
+
 }
 
 .project__article__h1{
-    width:60%;
-    max-width: 784px;
-    margin:0;
+
 }
 
 .project__article__page{
     display:block;
-    width:90%;
+    width:85vw;
     max-width: 1134px;
-    margin:200px auto 100px auto;
+    margin:0 auto;
     position:relative;
-    padding:60px 0 60px 0;
+    background-color:white;
     box-shadow: 0px 10px 70px rgba(0, 0, 0, 0.05);
-    text-align:center;
+}
+
+.project__article__wrapper{
+    padding:3rem 3rem 3rem 3rem;
+    width:60%;
+    max-width: 784px;
+    margin:0;
 }
