--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -1,5 +1,4 @@
-.homepage__hero {
-    padding:0;
+.homepage__hero-wrapper {
     height:90vh;    
     vertical-align: middle;
     position:relative;
@@ -52,7 +51,7 @@
 .homepage__page{
     width:90%;
     max-width: 1134px;
-    margin:0 auto 100px auto;
+    margin:0 auto;
     position:relative;
     padding:60px 0 60px 0;
     box-shadow: 0px 10px 70px rgba(0, 0, 0, 0.05);
