--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1,6 +1,6 @@
 .footer {
     display:grid;
-    width:90%;
+    width:85vw;
     max-width: 1134px;
     text-align: right;
     margin:100px auto 0 auto;
