--- a/src/components/project__intro.css
+++ b/src/components/project__intro.css
@@ -2,9 +2,9 @@
     display:block;
     object-fit: cover;
     max-width:1366px;
-    margin:3rem auto 0 auto;
+    margin:3vw auto 0 auto;
     width: 90vw;
-    height: 90vh;
+    height: 95vh;
 }
 
 
@@ -16,29 +16,27 @@
     position: relative;
     box-shadow: 0px 10px 70px rgba(0, 0, 0, 0.05);
     background-color:white;
-    margin:-15rem auto  auto;
+    margin:-40vh auto 60px;
  
 }
 
 .project__description__wrapper{
     display:grid;
-    padding:3rem 3rem 3rem 3rem;
+    padding:3vw 10%;
     grid-template-columns:70% 30%;
-    grid-template-rows:4;
-    grid-template-areas:"h1 h1" "h2 h2" "text text" "details logo" 
+    grid-template-rows:3;
+    grid-template-areas:"h1 h1" "text text" "details logo" 
     
 }
 
 .project__description__intro-para{
     grid-area: text;
+    margin-top:0;
 }
 
 .project__description__h1{
     grid-area: h1;
-}
-
-.project__description__h2{
-    grid-area: h2;
+    margin: 5vh 0 0 0;
 }
 
 .project__description__details{
@@ -53,3 +51,9 @@
     align-self:end
 }
 
+.project__description__year-location,
+.project__description__category,
+.project__description__team{
+    color:black;
+    margin:-1rem 0 1.5rem;
+}
