--- a/src/pages/global-styles.css
+++ b/src/pages/global-styles.css
@@ -10,13 +10,12 @@
 
 @import url('https://fonts.googleapis.com/css?family=Rosarivo:400,400i');
 
-
 body {
     font-family: 'Rosarivo', serif;
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
     font-size: 22px;
-    line-height: 1.2;
+    line-height: 1.6;
     margin:0;
     padding:0;
 }
@@ -30,11 +29,10 @@ a {
     text-decoration: underline;
 }
 
-
 .inlink{
     font-weight: 600;
     text-decoration: underline;
-  }
+}
 
 h1 {
     font-family: 'Helvetica CE', Helvetica, sans-serif;
@@ -49,7 +47,6 @@ h2 {
     -webkit-font-smoothing: antialiased;
     font-size: 30px;
     line-height: 1;
-
 }
 
 h3 {
@@ -58,7 +55,6 @@ h3 {
     -webkit-font-smoothing: antialiased;
     font-size: 26px;
     line-height: 1;
-
 }
 
 h4 {
@@ -68,11 +64,13 @@ h4 {
     font-size: 16px;
     line-height: 1;
     color: #8B8B8B;
+    font-weight: 400;
 }
 
 
-
 .project__article__p{
+    font-size: 20px;
+    line-height: 1.6;
 
 }
 
@@ -84,15 +82,30 @@ h4 {
     display:block;
     width:85vw;
     max-width: 1134px;
-    margin:0 auto;
+    margin:0 auto 60px;
     position:relative;
     background-color:white;
     box-shadow: 0px 10px 70px rgba(0, 0, 0, 0.05);
 }
 
 .project__article__wrapper{
-    padding:3rem 3rem 3rem 3rem;
-    width:60%;
+    padding:8vh 10%;
+
     max-width: 784px;
     margin:0;
+}
+
+.image-s{
+    max-width:60vw;
+    margin: 0 auto 60px auto;
+}
+
+.image-s{
+    max-width:75vw;
+    margin: 0 auto 60px auto;
+}
+
+.image-l{
+    max-width:90vw;
+    margin: 0 auto 60px auto;
 }
