--- a/src/components/homepage__card.css
+++ b/src/components/homepage__card.css
@@ -6,7 +6,7 @@
     position: relative;
     margin: 0 auto 80px auto;
     padding: 50px 7% 50px 7%;
-    grid-template-columns: auto 55px;
+    grid-template-columns: auto 75px;
     grid-template-rows: 26px 26px auto auto auto 25px;
 }
 
@@ -16,9 +16,9 @@
 }
 
 .homepage__card__logo{
-    width:55px;
-    height:55px;
-    margin-left:auto;
+    width:100%;
+    align-self: center;
+    margin:0 auto;
     grid-column:2/3;
     grid-row:1/3;
 }
@@ -62,7 +62,8 @@
     font-family: 'Rosarivo', serif;
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
-    font-size:22px;
+    font-size: 20px;
+    line-height: 180%;    
     margin:0;
     padding-bottom:20px;
     grid-row: 5/6;
