--- a/src/components/shelter__card.css
+++ b/src/components/shelter__card.css
@@ -1,13 +1,14 @@
 
 .shelter__card {
     display: grid;
-    width: 80%;
+    width:80%;
     max-width:810px;
     position: relative;
-    margin: 0 auto 80px auto;
+    margin: 0 auto 60px auto;
     padding: 50px 7% 50px 7%;
-    grid-template-columns: 350px auto;
+    grid-template-columns: 35% auto;
     grid-template-rows: 26px 26px auto auto;
+    grid-column-gap:3vw;
 }
 
 
@@ -30,7 +31,7 @@
     
 }
 
-.shelter__card h4 {
+ .shelter__card h4 {
     text-decoration:none;
 }
 
@@ -38,6 +39,7 @@
     margin:0;
     padding:20px 0 20px 0;
     grid-row: 3/4;
+    grid-column: 2/3;
     text-decoration: underline;
 }
 
@@ -45,20 +47,35 @@
     font-family: 'Rosarivo', serif;
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
-    font-size:22px;
+    font-size:20px;
+    font-weight:400;
     margin:0;
     padding-bottom:20px;
+    grid-column: 2/3;
     grid-row: 4/5;
-    line-height:140%;
+    line-height:180%;
     text-decoration:none;
 }
 
-.arrow-right {
+.shelter__card__arrow {
     float:right;
+    margin:0;
     width:25px;
     height:25px;
     margin-left:auto;
-    grid-column:1/2;
+    grid-column:2/3;
     grid-row:1/2;
-    transform: rotate(270deg);
+    transform: rotate(225deg);
 }
+
+.shelter__card__image{
+    width: 100%;
+    -o-object-fit: cover;
+       object-fit: cover;
+    grid-column:1/2;
+    grid-row:1/5;
+    margin: auto;
+    align-self: center;
+}
+
+
