Adds buttonback to comms page

--- a/src/components/comms__prj.css
+++ b/src/components/comms__prj.css
@@ -13,12 +13,15 @@
  }
 
 .comms__project__description__year-location,
-.comms__project__description__category,
-.comms__project__description__team{
+.comms__project__description__category{
     color:black;
     margin:-1rem 0 1.5rem;
 }
 
+.comms__project__description__team{
+    color:black;
+    margin: -1rem 0 40px;
+}
 .harika__grid{
     display:grid;
     width:90vw;
@@ -96,4 +99,24 @@ grid-row: 2 / 4;
 .sacrem__grid__image-2{
 width: 100%;
 grid-row: 1 / 4;
+}
+
+.sintesi__grid{
+    display:grid;
+    width:90vw;
+    max-width:1134px;
+    position: relative;
+    margin: 120px auto 60px auto;
+    grid-template-columns: 6fr 3fr;
+    grid-gap: 1rem;
+}
+
+.sintesi__grid__image-1{
+width: 100%;
+grid-row: 1/ 4;
+}
+
+.sintesi__grid__image-2{
+width: 100%;
+grid-row: 2 / 4;
 }
