--- a/src/pages/global-styles.css
+++ b/src/pages/global-styles.css
@@ -10,6 +10,20 @@
 
 @import url('https://fonts.googleapis.com/css?family=Rosarivo:400,400i');
 
+/* move scrollbar out of page*/
+html {
+    overflow: scroll;
+    overflow-x: hidden;
+}
+::-webkit-scrollbar {
+    width: 0px;  /* Remove scrollbar space */
+    background: transparent;  /* Optional: just make scrollbar invisible */
+}
+/* Optional: show position indicator in red */
+::-webkit-scrollbar-thumb {
+    background: #FF0000;
+}
+
 body {
     font-family: 'Rosarivo', serif;
     text-rendering: optimizeLegibility;
