--- a/src/pages/global-styles.css
+++ b/src/pages/global-styles.css
@@ -92,8 +92,7 @@ h4 {
     position: absolute;
     z-index:1;
     width:100%;
-    object-fit: cover;
-    
+    display: flex; justify-content: center;
     
 }
 
