--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -50,6 +50,9 @@
 
 
 .homepage__page{
+    z-index:2;
+    overflow:hidden;
+    background-color:white;
     width:90%;
     max-width: 1134px;
     margin:0 auto 60px auto;
@@ -86,4 +89,11 @@
     width: 130px;
     margin:60px auto 10px auto;
     text-decoration:underline;
+}
+
+.background-index{
+    z-index:3;
+    width:100%;
+        position: absolute;
+ margin:0 -40vw;
 }
