--- a/src/pages/global-styles.css
+++ b/src/pages/global-styles.css
@@ -1,323 +1,302 @@
 @font-face {
-    font-family: Helvetica CE; 
-    src: url('/fonts/Helvetica CE Regular.ttf') format('ttf');
-    src: url('/fonts/Helvetica CE Bold.ttf') format('ttf');
-    src: url('/fonts/helvetica_ce_regular.woff') format('ttf');
-    src: url('/fonts/helvetica_ce_regular.woff2') format('ttf');
-    src: url('/fonts/helvetica_ce_bold.woff') format('ttf');
-    src: url('/fonts/helvetica_ce_bold.woff2') format('ttf');
+  font-family: Helvetica CE;
+  src: url("/fonts/Helvetica CE Regular.ttf") format("ttf");
+  src: url("/fonts/Helvetica CE Bold.ttf") format("ttf");
+  src: url("/fonts/helvetica_ce_regular.woff") format("ttf");
+  src: url("/fonts/helvetica_ce_regular.woff2") format("ttf");
+  src: url("/fonts/helvetica_ce_bold.woff") format("ttf");
+  src: url("/fonts/helvetica_ce_bold.woff2") format("ttf");
 }
 
-@import url('https://fonts.googleapis.com/css?family=Rosarivo:400,400i');
+@import url("https://fonts.googleapis.com/css?family=Rosarivo:400,400i");
 
 html
 /* move scrollbar out of page*/
  {
-    overflow: scroll;
-    overflow-x: hidden;
+  overflow: scroll;
+  overflow-x: hidden;
 }
 ::-webkit-scrollbar {
-    width: 0px;  /* Remove scrollbar space */
-    background: transparent;  /* Optional: just make scrollbar invisible */
+  width: 0px; /* Remove scrollbar space */
+  background: transparent; /* Optional: just make scrollbar invisible */
 }
 /* Optional: show position indicator in red */
 ::-webkit-scrollbar-thumb {
-    background: #FF0000;
+  background: #ff0000;
 }
 
-
 body {
-    font-family: 'Rosarivo', serif;
-    text-rendering: optimizeLegibility;
-    -webkit-font-smoothing: antialiased;
-    font-size: 22px;
-    line-height: 1.6;
-    margin:0;
-    padding:0;
+  font-family: "Rosarivo", serif;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  font-size: 22px;
+  line-height: 1.6;
+  margin: 0;
+  padding: 0;
 }
 
 a {
-    font-family: 'Helvetica CE', Helvetica, sans-serif;
-    font-weight:bold;
-    color: black;
-    text-rendering: optimizeLegibility;
-    -webkit-font-smoothing: antialiased;
-    text-decoration: none;
+  font-family: "Helvetica CE", Helvetica, sans-serif;
+  font-weight: bold;
+  color: black;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  text-decoration: none;
 }
 
-.inlink{
-    font-weight: 600;
-    text-decoration: underline;
+.inlink {
+  font-weight: 600;
+  text-decoration: underline;
 }
 
 h1 {
-    font-family: 'Helvetica CE', Helvetica, sans-serif;
-    text-rendering: optimizeLegibility;
-    -webkit-font-smoothing: antialiased;
-    font-weight: bold;
+  font-family: "Helvetica CE", Helvetica, sans-serif;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  font-weight: bold;
 }
 
 h2 {
-    font-family: 'Helvetica CE', Helvetica, sans-serif;
-    text-rendering: optimizeLegibility;
-    -webkit-font-smoothing: antialiased;
-    font-size: 30px;
-    line-height: 1;
+  font-family: "Helvetica CE", Helvetica, sans-serif;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  font-size: 30px;
+  line-height: 1;
 }
 
-.h2-big{
-    font-size: 36px;
-    line-height: 1;
+.h2-big {
+  font-size: 36px;
+  line-height: 1;
 }
 
 h3 {
-    font-family: 'Helvetica CE', Helvetica, sans-serif;
-    text-rendering: optimizeLegibility;
-    -webkit-font-smoothing: antialiased;
-    font-size: 26px;
-    line-height: 1;
+  font-family: "Helvetica CE", Helvetica, sans-serif;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  font-size: 26px;
+  line-height: 1;
 }
 
 h4 {
-    font-family: 'Helvetica CE', Helvetica, sans-serif;
-    text-rendering: optimizeLegibility;
-    -webkit-font-smoothing: antialiased;
-    font-size: 16px;
-    line-height: 1;
-    color: #8B8B8B;
-    font-weight: 400;
+  font-family: "Helvetica CE", Helvetica, sans-serif;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  font-size: 16px;
+  line-height: 1;
+  color: #8b8b8b;
+  font-weight: 400;
 }
 
-.background{
-    position: absolute;
-    width:100%;
-    max-width: 4000px;
-    margin:-200px auto;
-
+.background {
+  position: absolute;
+  width: 100%;
+  max-width: 4000px;
+  margin: -200px auto;
 }
 
-.background-svg{
-    position: relative;
-    height: 100%;
+.background-svg {
+  position: relative;
+  height: 100%;
 
-    left: 50%;
-    -webkit-transform: translateX(-50%);
-    -ms-transform: translateX(-50%);
-    transform: translateX(-50%);
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
+  transform: translateX(-50%);
 }
-
 
 /*Projects*/
 
 .project__hero__img {
-    display:block;
-    object-fit: cover;
-    max-width:1366px;
-    margin:3vw auto 0 auto;
-    width: 90vw;
-    height: 95vh;
+  display: block;
+  object-fit: cover;
+  max-width: 1366px;
+  margin: 3vw auto 0 auto;
+  width: 90vw;
+  height: 95vh;
 }
 
-.project__article__wrapper{
-    padding:60px 7.5vw;
-    max-width: 784px;
-
+.project__article__wrapper {
+  padding: 60px 7.5vw;
+  max-width: 784px;
 }
 
-.project__article__page{
-    display:block;
-    width:85vw;
-    max-width: 1134px;
-    margin:0 auto 60px;
-    position:relative;
-    background-color:white;
-    box-shadow: 0px 10px 70px rgba(0, 0, 0, 0.05);
+.project__article__page {
+  display: block;
+  width: 85vw;
+  max-width: 1134px;
+  margin: 0 auto 60px;
+  position: relative;
+  background-color: white;
+  box-shadow: 0px 10px 70px rgba(0, 0, 0, 0.05);
 }
 
-.project__article__p{
-    font-size: 20px;
-    line-height: 180%;
-    max-width: 900px;
+.project__article__p {
+  font-size: 20px;
+  line-height: 180%;
+  max-width: 900px;
 }
 
-.project__article__p--small{
-    font-size: 16px;
-    line-height: 200%;
+.project__article__p--small {
+  font-size: 16px;
+  line-height: 200%;
 }
-
-
-
 
 /*images*/
 
-.image-s{
-    max-width:60vw;
-    margin: 0 auto 60px auto;
+.image-s {
+  max-width: 60vw;
+  margin: 0 auto 60px auto;
 }
 
-.image-m{
-    max-width:75vw;
-    margin: 0 auto 60px auto;
+.image-m {
+  max-width: 75vw;
+  margin: 0 auto 60px auto;
 }
 
-.image-l{
-    width:90vw;
-    max-width:1366px;
-    margin: 0 auto 60px auto;
+.image-l {
+  width: 90vw;
+  max-width: 1366px;
+  margin: 0 auto 60px auto;
 }
-
-
-
 
 /*homepage*/
 
 .homepage__hero-wrapper {
-    height:70vh;
-    margin-top:5vw;    
-    vertical-align: middle;
-    position:relative;
+  height: 70vh;
+  margin-top: 5vw;
+  vertical-align: middle;
+  position: relative;
 }
 
 .homepage__hero__group {
-    top:50%;
-    left:50%;
-    transform: translate(-50%, -50%);
-    -webkit-transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    margin:0;
-    width: 85%;
-    max-width: 672px;
-    position:absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  margin: 0;
+  width: 85%;
+  max-width: 672px;
+  position: absolute;
 }
-
-
 
 .homepage__hero__h1 {
-    font-size: 30px;
-    line-height: 1;
-    margin-left: 0;
-    margin-top: 0;
+  font-size: 30px;
+  line-height: 1;
+  margin-left: 0;
+  margin-top: 0;
 }
 
-.homepage__hero__p{
-    padding-top:30px;
-    padding-bottom:30px;
-    max-width:492px;
-    margin:auto;
+.homepage__hero__p {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  max-width: 492px;
+  margin: auto;
 }
 
-.homepage__hero__h2{
-    max-width:400px;
-    margin-left:auto;
-    text-align:right;
+.homepage__hero__h2 {
+  max-width: 400px;
+  margin-left: auto;
+  text-align: right;
 }
 
-
-
-.arrow-down{
-    position:relative;
-    max-width:30px;
-    margin: 5vh auto;
+.arrow-down {
+  position: relative;
+  max-width: 30px;
+  margin: 5vh auto;
 }
 
-
-
-.homepage__page{
-    z-index:2;
-    overflow:hidden;
-    background-color:white;
-    width:90%;
-    max-width: 1134px;
-    margin:0 auto 60px auto;
-    position:relative;
-    padding:60px 0 60px 0;
-    box-shadow: 0px 10px 70px rgba(0, 0, 0, 0.05);
-    text-align:center;
+.homepage__page {
+  z-index: 2;
+  overflow: hidden;
+  background-color: white;
+  width: 90%;
+  max-width: 1134px;
+  margin: 0 auto 60px auto;
+  position: relative;
+  padding: 60px 0 60px 0;
+  box-shadow: 0px 10px 70px rgba(0, 0, 0, 0.05);
+  text-align: center;
 }
 
 .bio {
-    width:80%;
-    margin:20px auto 60px auto;
-    text-align:center;
+  width: 80%;
+  margin: 20px auto 60px auto;
+  text-align: center;
 }
 
-.avatar{
-    display:block;
-    margin:auto;
-    width: 30vw;
-    max-width:300px;
-    height:30vw;
-    max-width:300px;
-    max-height:300px;
-    border-radius:50%;
+.avatar {
+  display: block;
+  margin: auto;
+  width: 30vw;
+  max-width: 300px;
+  height: 30vw;
+  max-width: 300px;
+  max-height: 300px;
+  border-radius: 50%;
 }
 
-.downloadicon{
-    display:block;
-    margin:auto;    
+.downloadicon {
+  display: block;
+  margin: auto;
 }
 
-.downloadtext{
-    display:inline-block;
-    width: 130px;
-    margin:60px auto 10px auto;
-    text-decoration:underline;
+.downloadtext {
+  display: inline-block;
+  width: 130px;
+  margin: 60px auto 10px auto;
+  text-decoration: underline;
 }
 
-.background-index{
-    z-index:3;
-    width:100%;
-    position: absolute;
-    pointer-events: none;
+.background-index {
+  z-index: 3;
+  width: 100%;
+  position: absolute;
+  pointer-events: none;
 }
-
 
 /*flair*/
 
-
-.flair__grid{
-    display:grid;
-    width:90vw;
-    max-width:1366px;
-    position: relative;
-    margin: 0 auto 60px auto;
-    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
-    grid-gap: 1rem;
+.flair__grid {
+  display: grid;
+  width: 90vw;
+  max-width: 1366px;
+  position: relative;
+  margin: 0 auto 60px auto;
+  grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+  grid-gap: 1rem;
 }
 
-.flair__grid__image{
-    width: 100%;
- }
-
-
- 
+.flair__grid__image {
+  width: 100%;
+}
 
 /*gimble*/
 
-.gimble__quote__div{
-    max-width:60vw;
-    margin: 0 auto 60px auto;
-    text-align: center;
+.gimble__quote__div {
+  max-width: 60vw;
+  margin: 0 auto 60px auto;
+  text-align: center;
 }
 
-.gimble__quote{
-    font-family: 'Rosarivo', serif;
-    text-rendering: optimizeLegibility;
-    -webkit-font-smoothing: antialiased;
-    font-size: 26px;
-    line-height: 1.6;
-    margin:0;
-    padding:0;
-    color:#17C792
+.gimble__quote {
+  font-family: "Rosarivo", serif;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  font-size: 26px;
+  line-height: 1.6;
+  margin: 0;
+  padding: 0;
+  color: #17c792;
 }
 
-.gimble__caption{
-    font-family: 'Rosarivo', serif;
-    text-rendering: optimizeLegibility;
-    -webkit-font-smoothing: antialiased;
-    font-size: 20px;
-    line-height: 1.4;
-    margin:0;
-    padding:0;
-    color:#8B8B8B
+.gimble__caption {
+  font-family: "Rosarivo", serif;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  font-size: 20px;
+  line-height: 1.4;
+  margin: 0;
+  padding: 0;
+  color: #8b8b8b;
 }
