Adds hover microinteractions

--- a/src/pages/global-styles.css
+++ b/src/pages/global-styles.css
@@ -227,24 +227,40 @@ h4 {
 
 .avatar {
   display: block;
-  margin: auto;
+  margin: 0 auto 60px;
   width: 30vw;
   max-width: 300px;
   height: 30vw;
   max-width: 300px;
   max-height: 300px;
   border-radius: 50%;
+  
+}
+.homepage__download-cv{
+  width: 200px;
+  padding:20px;
+  margin:auto;
+}
+.homepage__download-cv:hover {    
+  transition: all 0.2s ease;
+  box-shadow: 0px 10px 70px rgba(0, 0, 0, 0.05);
+  outline: 1px solid black;
 }
 
 .downloadicon {
   display: block;
-  margin: auto;
+  margin: 0 auto 5px;
 }
+
+.homepage__download-cv:hover .downloadicon{
+  transition: all 0.4s cubic-bezier(0.77, 0, 0.175, 1);
+  margin: 5px auto 0;
+} 
 
 .downloadtext {
   display: inline-block;
   width: 130px;
-  margin: 60px auto 10px auto;
+  margin: 0 auto 10px auto;
   text-decoration: underline;
 }
 
