--- a/src/components/homepage__card.css
+++ b/src/components/homepage__card.css
@@ -1,5 +1,6 @@
 
 .homepage__card {
+    transition: all 2s ease;
     display: grid;
     width: 80%;
     max-width:670px;
@@ -8,13 +9,28 @@
     padding: 50px 7% 50px 7%;
     grid-template-columns: auto 75px;
     grid-template-rows: 26px 26px auto auto auto 25px;
+
 }
 
-
-.homepage__card:hover {
+.homepage__card:hover {    
+    transition: all 0.2s ease;
     box-shadow: 0px 10px 70px rgba(0, 0, 0, 0.05);
+    outline: 1px solid black;
 }
 
+.homepage__card__arrow {
+    width:25px;
+    height:25px;
+    margin:0 5px 0 auto;
+    grid-column-start:2;
+    grid-row:6/7;
+    transform: rotate(270deg);
+}
+
+.homepage__card:hover .homepage__card__arrow {
+    transition: all 0.4s cubic-bezier(0.77, 0, 0.175, 1);
+    margin:0 0 0 auto;
+}
 .homepage__card__logo{
     width:100%;
     align-self: center;
@@ -71,14 +87,7 @@
     text-decoration:none;
 }
 
-.arrow-right {
-    width:25px;
-    height:25px;
-    margin-left:auto;
-    grid-column-start:2;
-    grid-row:6/7;
-    transform: rotate(270deg);
-}
+
 
 .homepage__card__link {
     all: initial;
