--- a/src/components/shelter__card.css
+++ b/src/components/shelter__card.css
@@ -9,11 +9,31 @@
     grid-template-columns: 35% auto;
     grid-template-rows: 26px 26px auto auto;
     grid-column-gap:3vw;
+    outline:1px white;
+   
 }
 
 
 .shelter__card:hover {
+    transition: all 0.2s ease;
     box-shadow: 0px 10px 70px rgba(0, 0, 0, 0.05);
+    outline: 1px solid black;
+}
+
+
+.shelter__card__arrow {
+    float:right;
+    margin:5px 5px 0 auto;
+    width:25px;
+    height:25px;
+    grid-column:2/3;
+    grid-row:1/2;
+    transform: rotate(225deg);
+}
+
+.shelter__card:hover .shelter__card__arrow {
+    transition: all 0.6s cubic-bezier(0.77, 0, 0.175, 1);
+    margin:0 0 0 auto;
 }
 
 .shelter__card__year{
@@ -57,16 +77,8 @@
     text-decoration:none;
 }
 
-.shelter__card__arrow {
-    float:right;
-    margin:0;
-    width:25px;
-    height:25px;
-    margin-left:auto;
-    grid-column:2/3;
-    grid-row:1/2;
-    transform: rotate(225deg);
-}
+
+
 
 .shelter__card__image{
     width: 100%;
