--- a/src/components/buttonback.css
+++ b/src/components/buttonback.css
@@ -1,5 +1,9 @@
 .button-back{
-    margin:6rem 0 6rem 0;
+    margin:60px 0 60px;
+}
+
+.button-back:hover{
+    text-decoration: underline;
 }
 
 .arrow_left {
@@ -7,5 +11,12 @@
     width:25px;
     height:25px;
     transform: rotate(90deg);
-    margin:0 1rem 0 1rem;
+    margin:0 10px 0 10px;
+    transition: all 0.4s cubic-bezier(0.77, 0, 0.175, 1);
+
+}
+
+.button-back:hover .arrow_left{
+    margin: 0 20px 0 0;
+    transition: all 0.4s cubic-bezier(0.77, 0, 0.175, 1);
 }
