--- a/src/components/homepage__card.css
+++ b/src/components/homepage__card.css
@@ -1,36 +1,46 @@
 
 .homepage__card {
-    transition: all 2s ease;
     display: grid;
     width: 80%;
     max-width:670px;
     position: relative;
-    margin: 0 auto 80px auto;
+    margin: 0 auto 60px;
     padding: 50px 7% 50px 7%;
-    grid-template-columns: auto 75px;
+    grid-template-columns: minmax(auto,595px) 75px;
     grid-template-rows: 26px 26px auto auto auto 25px;
-
+    outline: 1px solid white;
+    transition: all 0.4s cubic-bezier(0.77, 0, 0.175, 1);
 }
 
 .homepage__card:hover {    
-    transition: all 0.2s ease;
     box-shadow: 0px 10px 70px rgba(0, 0, 0, 0.05);
     outline: 1px solid black;
+    transition: all 0.4s cubic-bezier(0.77, 0, 0.175, 1);
+}
+
+
+.homepage__card:active {    
+    transition: all 0.2s cubic-bezier(0.77, 0, 0.175, 1);
+    box-shadow: 0px 0px 0px rgba(0, 0, 0, 0.05);
+    outline: 2px solid black;
+    background-color:rgba(0, 0, 0, 0.01);
 }
 
 .homepage__card__arrow {
     width:25px;
     height:25px;
-    margin:0 5px 0 auto;
+    margin:0 10px 0 auto;
     grid-column-start:2;
     grid-row:6/7;
     transform: rotate(270deg);
+    transition: all 0.4s cubic-bezier(0.77, 0, 0.175, 1);
 }
 
 .homepage__card:hover .homepage__card__arrow {
-    transition: all 0.4s cubic-bezier(0.77, 0, 0.175, 1);
     margin:0 0 0 auto;
+    transition: all 0.4s cubic-bezier(0.77, 0, 0.175, 1);
 }
+
 .homepage__card__logo{
     width:100%;
     align-self: center;
@@ -45,6 +55,7 @@
     grid-row: 1/2;
     grid-column: 1/2;
     font-weight: normal;
+    text-decoration:none;
 }
 
 .homepage__card__location{
@@ -52,25 +63,30 @@
     grid-row: 2/3;
     grid-column: 1/2;
     font-weight: normal;
+    text-decoration:none;
     
 }
 
-.homepage__card h4 {
-    text-decoration:none;
-}
 
 .homepage__card h2 {
     margin:0;
     padding:20px 0 20px 0;
+    grid-column:1/3;
     grid-row: 3/4;
+    text-decoration: none;
+}
+
+.homepage__card:hover h2 {
     text-decoration: underline;
 }
+
 
 .homepage__card h3 {
     margin:0;
     padding-bottom:30px;
+    grid-column:1/3;
     grid-row: 4/5;
-    text-decoration: underline;
+    text-decoration: none;
 }
 
 
@@ -82,6 +98,7 @@
     line-height: 180%;    
     margin:0;
     padding-bottom:20px;
+    grid-column:1/3;
     grid-row: 5/6;
     line-height:140%;
     text-decoration:none;
