--- a/src/components/buttonback.css
+++ b/src/components/buttonback.css
@@ -1,12 +1,19 @@
 .button-back{
-    margin:60px 0 60px;
+    margin:60px 0px 60px;
+    position:relative;
+    width:250px;
+    display:inline-block;
+   
 }
 
 .button-back:hover{
     text-decoration: underline;
 }
 
-.arrow_left {
+.button-back__text {
+    margin:0;
+}
+.button-back__arrow_left {
     float:left;
     width:25px;
     height:25px;
@@ -16,7 +23,7 @@
 
 }
 
-.button-back:hover .arrow_left{
+.button-back:hover .button-back__arrow_left{
     margin: 0 20px 0 0;
     transition: all 0.4s cubic-bezier(0.77, 0, 0.175, 1);
 }
