--- a/src/components/homepage__card.css
+++ b/src/components/homepage__card.css
@@ -23,7 +23,7 @@
     transition: all 0.2s cubic-bezier(0.77, 0, 0.175, 1);
     box-shadow: 0px 0px 0px rgba(0, 0, 0, 0.05);
     outline: 2px solid black;
-    background-color:rgba(0, 0, 0, 0.01);
+    background-color:rgb(250, 250, 250);
 }
 
 .homepage__card__arrow_right {
@@ -87,7 +87,7 @@
 
 .homepage__card h2 {
     margin:0;
-    padding:20px 0 20px 0;
+    padding:30px 0 10px 0;
     grid-column:1/3;
     grid-row: 3/4;
     text-decoration: none;
