--- a/src/pages/global-styles.css
+++ b/src/pages/global-styles.css
@@ -262,7 +262,7 @@ h4 {
 .download-cv:active {    
   box-shadow: 0px 0px 0px rgba(0, 0, 0, 0.05);
   outline: 2px solid black;
-  background-color:rgba(0, 0, 0, 0.01);
+  background-color:rgb(250, 250, 250);
 }
 
 .download-cv__text {
