--- a/src/pages/global-styles.css
+++ b/src/pages/global-styles.css
@@ -60,11 +60,6 @@ h2 {
   line-height: 1;
 }
 
-.h2-big {
-  font-size: 36px;
-  line-height: 1;
-}
-
 h3 {
   font-family: "Helvetica CE", Helvetica, sans-serif;
   text-rendering: optimizeLegibility;
@@ -128,7 +123,7 @@ h4 {
 
 .project__article__p {
   font-size: 20px;
-  line-height: 180%;
+  line-height: 1.8;
   max-width: 900px;
 }
 
@@ -330,3 +325,160 @@ h4 {
   color: #8b8b8b;
 }
 
+/*comms*/
+
+.harika__grid{
+  display:grid;
+  width:90vw;
+  max-width:1134px;
+  position: relative;
+  margin: 120px auto 60px auto;
+  grid-template-columns: 6fr 3fr;
+  grid-gap: 1rem;
+}
+
+.harika__grid__image-1{
+  width: 100%;
+  grid-column: 1 / 2;
+  grid-row: 1 / 4;
+}
+
+.harika__grid__image-2{
+  width: 100%;
+  grid-column: 2 / 3;
+  grid-row: 2 / 3;
+}
+
+.harika__grid__image-3{
+  width: 100%;
+  grid-column: 2 / 3;
+  grid-row: 3 / 4;
+}
+
+
+
+.saporita__grid{
+      display:grid;
+      width:90vw;
+      max-width:1134px;
+      position: relative;
+      margin: 120px auto 60px auto;
+      grid-template-columns: 1.3fr 1fr 1fr 1fr;
+      grid-gap: 1rem;
+  }
+
+.saporita__grid__image-1{
+  width: 100%;
+  grid-column: 1 / 2;
+  grid-row: 1 / 4;
+}
+
+.saporita__grid__image-2{
+  width: 100%;
+  grid-column: 2 / 5;
+  grid-row: 1 / 2;
+}
+
+.saporita__grid__image-3{
+  width: 100%;
+  grid-column: 3 / 4;
+  grid-row: 2 / 4;
+}
+
+
+.sacrem__grid{
+  display:grid;
+  width:90vw;
+  max-width:1134px;
+  position: relative;
+  margin: 120px auto 60px auto;
+  grid-template-columns: 4fr 3fr;
+  grid-gap: 1rem;
+}
+
+.sacrem__grid__image-1{
+width: 100%;
+grid-row: 2 / 4;
+}
+
+.sacrem__grid__image-2{
+width: 100%;
+grid-row: 1 / 4;
+}
+
+.sintesi__grid{
+  display:grid;
+  width:90vw;
+  max-width:1134px;
+  position: relative;
+  margin: 120px auto 60px auto;
+  grid-template-columns: 6fr 3fr;
+  grid-gap: 1rem;
+}
+
+.sintesi__grid__image-1{
+width: 100%;
+grid-row: 1/ 4;
+}
+
+.sintesi__grid__image-2{
+width: 100%;
+grid-row: 2 / 4;
+}
+
+
+/*responsive*/
+
+@media only screen and (max-width: 500px){
+  
+body {
+  font-size: 20px;
+  line-height: 1.8;
+ 
+}
+
+
+h1 {
+  font-size: 30px;
+  line-height: 1.4;
+}
+
+h2 {
+
+  font-size: 26px;
+  line-height: 1.4;
+}
+
+h3 {
+  font-size: 22px;
+  line-height: 1.4;
+}
+
+h4 {
+
+  font-size: 16px;
+  line-height: 1.4;
+}
+
+.project__article__p {
+  font-size: 18px;
+  line-height: 1.8;
+  max-width: 900px;
+}
+
+.gimble__quote {
+  font-size: 24px;
+  line-height: 1.8;
+
+}
+
+.gimble__quote__div {
+  max-width: 80vw;
+}
+
+  .hide-responsive{
+    display:none;
+
+}
+
+}
