--- a/src/components/homepage__card.css
+++ b/src/components/homepage__card.css
@@ -112,12 +112,11 @@
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
     font-size: 20px;
-    line-height: 180%;    
+    line-height: 1.8;    
     margin:0;
     padding-bottom:20px;
     grid-column:1/3;
     grid-row: 5/6;
-    line-height:140%;
     text-decoration:none;
 }
 
