--- a/src/components/shelter__card.css
+++ b/src/components/shelter__card.css
@@ -8,6 +8,11 @@
     padding: 50px 7% 50px 7%;
     grid-template-columns: 35% auto;
     grid-template-rows: 26px 26px auto auto;
+    grid-template-areas: 
+    'image date'
+    'image location'
+    'image title'
+    'image paragraph' ;
     grid-column-gap:3vw;
     outline:1px white;
    
@@ -36,6 +41,7 @@
     grid-row:1/2;
     transform: rotate(225deg);
     transition: all 0.4s cubic-bezier(0.77, 0, 0.175, 1);
+    grid-area: date;
 }
 
 .shelter__card:hover .shelter__card__arrow {
@@ -49,6 +55,7 @@
     grid-row: 1/2;
     grid-column: 2/3;
     font-weight: normal;
+    grid-area: date;
 }
 
 .shelter__card__location{
@@ -56,6 +63,7 @@
     grid-row: 2/3;
     grid-column: 2/3;
     font-weight: normal;
+    grid-area: location;
     
 }
 
@@ -70,6 +78,7 @@
     grid-row: 3/4;
     grid-column: 2/3;
     text-decoration: none;
+    grid-area: title;
 }
 
 .shelter__card:hover h2 {
@@ -89,6 +98,7 @@
     grid-row: 4/5;
     line-height:180%;
     text-decoration:none;
+    grid-area: paragraph;
 }
 
 
@@ -102,6 +112,23 @@
     grid-row:1/5;
     margin: auto;
     align-self: center;
+    grid-area: image;
 }
 
 
+@media only screen and (max-width: 600px){
+    .shelter__card{  
+    display: grid;
+    width: 80%;
+    grid-template-columns: auto;
+    grid-template-rows: 26px 40px auto auto auto;
+    grid-template-areas: 
+    'date'
+    'location'
+    'image'
+    'title' 
+    'paragraph' ;
+    grid-column-gap: 3vw;
+
+}
+}
