--- a/src/pages/global-styles.css
+++ b/src/pages/global-styles.css
@@ -426,6 +426,11 @@ width: 100%;
 grid-row: 2 / 4;
 }
 
+@media only screen and (min-width: 500px){
+.show-responsive{
+  display:none;
+}
+}
 
 /*responsive*/
 
@@ -439,7 +444,7 @@ body {
 
 
 h1 {
-  font-size: 30px;
+  font-size: 32px;
   line-height: 1.4;
 }
 
@@ -461,7 +466,7 @@ h4 {
 }
 
 .project__article__p {
-  font-size: 18px;
+  font-size: 20px;
   line-height: 1.8;
   max-width: 900px;
 }
@@ -480,5 +485,7 @@ h4 {
     display:none;
 
 }
+
+
 
 }
