--- a/src/pages/global-styles.css
+++ b/src/pages/global-styles.css
@@ -54,7 +54,7 @@ h2 {
   font-family: "Helvetica CE", Helvetica, sans-serif;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
-  font-size: 30px;
+  font-size: 34px;
   line-height: 1;
 }
 
@@ -119,8 +119,6 @@ h4 {
 }
 
 .project__article__p {
-  font-size: 20px;
-  line-height: 1.8;
   max-width: 900px;
 }
 
@@ -135,6 +133,7 @@ h4 {
   max-width: 60vw;
   max-width: 900px;
   margin: 0 auto 60px auto;
+  
 }
 
 .image-m {
@@ -171,7 +170,7 @@ h4 {
   left: 50%;
   transform: translate(-50%, -50%);
   grid-template-rows: auto 20fr auto;
-  row-gap: 5%;
+  row-gap: 1.5vh;
 }
 
 .homepage__hero__h1 {
@@ -192,7 +191,7 @@ h4 {
   max-width: 400px;
   line-height: 1.3;
   margin-left: auto;
-  margin-top:0;
+  margin-top: 0;
   text-align: right;
   grid-row: 3/4;
 }
@@ -420,85 +419,67 @@ h4 {
   grid-row: 2 / 4;
 }
 
-@media only screen and (min-width: 501px){
-.show-responsive{
-  display:none;
-}
+@media only screen and (min-width: 501px) {
+  .show-responsive {
+    display: none;
+  }
 }
 
 /*responsive*/
 
-@media only screen and (max-width: 500px){
-  
-body {
-  font-size: 20px;
-  line-height: 1.8;
- 
-}
-
-
-h1 {
-  font-size: 32px;
-  line-height: 1.4;
-}
-
-h2 {
-
-  font-size: 26px;
-  line-height: 1.4;
-}
+@media only screen and (max-width: 500px) {
+  body {
+    line-height: 1.8;
+    font-size: calc(14px + 8 * ((100vw - 250px) / 250));
+  }
 
   h1 {
-    font-size: 30px;
-    line-height: 1.4;
+    font-size: calc(28px + 8 * ((100vw - 250px) / 250));
+    line-height: 1.2;
   }
 
   h2 {
-    font-size: 26px;
+    font-size: calc(24px + 8 * ((100vw - 250px) / 250));
     line-height: 1.4;
   }
 
   h3 {
-    font-size: 22px;
+    font-size: calc(20px + 4 * ((100vw - 250px) / 250));
+
     line-height: 1.4;
   }
 
-  .project__article__p {
-    font-size: 20px;
-    line-height: 1.8;
-    max-width: 900px;
-  }
   h4 {
-    font-size: 16px;
+    font-size: calc(14px + 2 * ((100vw - 250px) / 250));
+
     line-height: 1.4;
   }
 
   .homepage__hero__h2 {
-      font-size: 24px;
-      line-height: 1.4;
-      text-align: left;
-  }
+
+    text-align: left;
+    margin-left:0;}
 
   .homepage__page {
-    
     width: 95%;
-    }
-    .project__article__page {
-      width: 90vw;}
+  }
+  .project__article__page {
+    width: 90vw;
+  }
 
-  .project__article__p {
-    font-size: 18px;
-    line-height: 1.8;
-    max-width: 900px;
+  .project__article__wrapper{
+    padding:40px 7.5vw;
+    
   }
 
   .gimble__quote {
-    font-size: 24px;
+    font-size: calc(20px + 4 * ((100vw - 250px) / 250));
     line-height: 1.8;
   }
 
   .gimble__quote__div {
     max-width: 80vw;
+    margin: 80px auto;
   }
 
   .hide-responsive {
