replaces Helvetica with Inter

--- a/src/components/comms__prj.css
+++ b/src/components/comms__prj.css
@@ -16,9 +16,11 @@
 .comms__project__description__category {
   color: black;
   margin: -1rem 0 1.5rem;
+  text-transform: none;
 }
 
 .comms__project__description__team {
   color: black;
   margin: -1rem 0 40px;
+  text-transform: none;
 }
