--- a/src/components/homepage__card.css
+++ b/src/components/homepage__card.css
@@ -5,8 +5,8 @@
   position: relative;
   margin: 0 auto 60px;
   padding: 50px 7% 50px 7%;
-  grid-template-columns: auto 75px;
-  grid-template-rows: 25px 15px auto auto auto 25px;
+  grid-template-columns: auto 70px;
+  grid-template-rows: 20px 15px auto auto auto 25px;
   outline: 1px solid white;
   transition: all 0.4s cubic-bezier(0.77, 0, 0.175, 1);
 }
@@ -81,10 +81,11 @@
 
 .homepage__card h2 {
   margin: 0;
-  padding: 2rem 0 1rem 0;
+  padding: 2rem 0 0.5rem 0;
   grid-column: 1/3;
   grid-row: 3/4;
   text-decoration: none;
+  
 }
 
 .homepage__card:hover h2 {
@@ -97,6 +98,7 @@
   grid-column: 1/3;
   grid-row: 4/5;
   text-decoration: none;
+  font-weight: 400;
 }
 
 .homepage__card p {
@@ -121,7 +123,4 @@
     width: 80%;
    }
 
-   .homepage__card h2 {
-    padding: 2rem 0 0.5rem 0;
-  }
 }
