--- a/src/pages/global-styles.css
+++ b/src/pages/global-styles.css
@@ -1,14 +1,6 @@
-@font-face {
-  font-family: Helvetica CE;
-  src: url("/fonts/Helvetica CE Regular.ttf") format("ttf");
-  src: url("/fonts/Helvetica CE Bold.ttf") format("ttf");
-  src: url("/fonts/helvetica_ce_regular.woff") format("ttf");
-  src: url("/fonts/helvetica_ce_regular.woff2") format("ttf");
-  src: url("/fonts/helvetica_ce_bold.woff") format("ttf");
-  src: url("/fonts/helvetica_ce_bold.woff2") format("ttf");
-}
-
 @import url("https://fonts.googleapis.com/css?family=Rosarivo:400,400i");
+
+@import url('https://rsms.me/inter/inter.css');
 
 html
 /* move scrollbar out of page*/
@@ -29,14 +21,14 @@ body {
   font-family: "Rosarivo", serif;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
-  font-size: 22px;
+  font-size: 21px;
   line-height: 1.6;
   margin: 0;
   padding: 0;
 }
 
 a {
-  font-family: "Helvetica CE", Helvetica, sans-serif;
+  font-family: "inter", Helvetica, sans-serif;
   color: black;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -44,22 +36,22 @@ a {
 }
 
 h1 {
-  font-family: "Helvetica CE", Helvetica, sans-serif;
+  font-family: "inter", Helvetica, sans-serif;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   font-weight: bold;
 }
 
 h2 {
-  font-family: "Helvetica CE", Helvetica, sans-serif;
+  font-family: "inter", Helvetica, sans-serif;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
-  font-size: 34px;
+  font-size: 30px;
   line-height: 1;
 }
 
 h3 {
-  font-family: "Helvetica CE", Helvetica, sans-serif;
+  font-family: "inter", Helvetica, sans-serif;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   font-size: 26px;
@@ -67,13 +59,15 @@ h3 {
 }
 
 h4 {
-  font-family: "Helvetica CE", Helvetica, sans-serif;
+  font-family: "inter", Helvetica, sans-serif;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
-  font-size: 16px;
-  line-height: 1;
+  font-size: 14px;
+  line-height: 1.5;
   color: #8b8b8b;
   font-weight: 400;
+  text-transform: uppercase;
+
 }
 
 .background {
@@ -476,7 +470,7 @@ h4 {
   }
 
   h4 {
-    font-size: calc(14px + 2 * ((100vw - 250px) / 250));
+    font-size: calc(12px + 2 * ((100vw - 250px) / 250));
 
     line-height: 1.4;
   }
