--- a/src/components/shelter__card.css
+++ b/src/components/shelter__card.css
@@ -15,6 +15,8 @@
     'image paragraph' ;
     grid-column-gap:3vw;
     outline:1px white;
+    transition: all 0.4s cubic-bezier(0.77, 0, 0.175, 1);
+
    
 }
 
@@ -23,7 +25,8 @@
     box-shadow: 0px 10px 70px rgba(0, 0, 0, 0.05);
     outline: 1px solid black;
     transition: all 0.4s cubic-bezier(0.77, 0, 0.175, 1);
-
+    transform: translateZ(0); /*for older browsers*/
+    will-change: transform;
 }
 
 .shelter__card:active {    
