Replaces 404, adds animation to comms

--- a/src/pages/global-styles.css
+++ b/src/pages/global-styles.css
@@ -68,6 +68,10 @@ h4 {
   font-weight: 400;
   text-transform: uppercase;
 }
+.test{
+  transform: translateZ(0); /*for older browsers*/
+  will-change: transform;
+}
 
 .background {
   position: absolute;
@@ -75,8 +79,7 @@ h4 {
   max-width: 4000px;
   margin: -200px auto;
   filter: blur(30px);
-  transform: translateZ(0); /*for older browsers*/
-  will-change: transform;
+
   pointer-events: none;
 }
 
@@ -142,6 +145,22 @@ h4 {
   width: 90vw;
   max-width: 1366px;
   margin: 0 auto 60px auto;
+}
+
+/*404*/
+.fouroufour__wrapper {
+  height: 75vh;
+  width: 90vw;
+  max-width: 700px;
+  padding-top:3vw;
+  margin:auto;
+  text-align: center;
+  position: relative;
+}
+
+.fouroufour__image {
+  border-radius:5px;
+  width: 100%;
 }
 
 /*homepage*/
